<resources>
    <string name="app_name">SkyDelight</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_return">Regresar</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_previous">Anterior</string>
    <string name="btn_start">¡Empezar!</string>
    <string name="email">Correo Electrónico:</string>
    <string name="email_hint">ejemplo@hotmail.com</string>
    <string name="password">Contraseña:</string>
    <string name="password_hint">AbC123#*</string>
    <string name="remember_session">Mantener Sesión Iniciada</string>
    <string name="name">Nombre Completo:</string>
    <string name="sex">Sexo:</string>
    <string name="birthday">Edad:</string>
    <string name="loading">Cargando…</string>
    <string name="picture_logo">Logo de SkyDelight</string>
    <string name="picture_reload">Recargar Consejo</string>
    <string name="picture_help">Ayuda</string>
    <string name="picture_wave_top">Onda en Parte Superior</string>
    <string name="picture_wave_bottom">Onda en Parte Inferior</string>
    <string name="picture_arrow_left">Flecha Izquierda</string>
    <string name="picture_arrow_right">Flecha Derecha</string>
    <string name="picture_heart_relaxed">Corazón Relajado</string>
    <string name="picture_risk_level">Nivel de Riesgo</string>
    <string name="custom_dialog_error_title">¡Error de Conexión!</string>
    <string name="custom_dialog_error_description">Estamos teniendo alguna(s) dificultad(es), te recomendamos verificar tu conexión a internet, reiniciar la aplicación o entrar más tarde</string>
    <string name="custom_dialog_error_button">Reiniciar</string>
    <string name="snackbar_success_recover">"¡Recuperación Exitosa!\n¡Se te ha enviado un mensaje al correo!"</string>
    <string name="snackbar_success_register">"¡Registro Exitoso!\n¡Cuenta creada correctamente!"</string>
    <string name="snackbar_success_delete_account">"¡Eliminación Exitosa!\n¡Tu cuenta ha sido eliminada!"</string>
    <string name="snackbar_success_update_data">"¡Actualización Exitosa!\n¡Datos actualizados correctamente!"</string>
    <string name="snackbar_success_update_password">"¡Actualización Exitosa!\n¡Contraseña actualizada correctamente!"</string>
    <string name="snackbar_error_login">"¡Error! ¡Acceso Prohibido!\n¡Cuenta inexistente o datos erróneos!"</string>
    <string name="snackbar_error_recover">"¡Error! ¡Correo Inválido!\n¡El correo no es de ninguna cuenta!"</string>
    <string name="snackbar_error_sex">"¡Parece que olvidaste elegir tu sexo!"</string>
    <string name="snackbar_error_register">"¡Error! ¡Cuenta Existente!\n¡Ya existe una cuenta con ese correo!"</string>
    <string name="snackbar_error_connection">"¡Ups! ¡Hubo un Problema de Conexión! ¡Parece que Estamos Teniendo Algunas Dificultades!"</string>
    <string name="snackbar_error_update_data">"¡Error! ¡Cambios Faltantes!\n¡Olvidaste actualizar tu información!"</string>
    <string name="startScreen_welcome">Bienvenido(a) a</string>
    <string name="startScreen_relax">La Nueva Forma de Relajarse</string>
    <string name="startScreen_btn_register">¿Sin Cuenta? ¡Crea Una!</string>
    <string name="startScreen_recover_password">¿Olvidaste tu Contraseña?</string>
    <string name="loginScreen_title">¡Qué Bueno Que Volviste!</string>
    <string name="recoverScreen_title">¡Descuida! ¡Te Tenemos Cubierto!</string>
    <string name="recoverScreen_subtitle">Ingresa el Correo con el que te Registraste</string>
    <string name="recoverScreen_btn_recover">Recuperar</string>
    <string name="registerScreen_title">Creemos tu Cuenta</string>
    <string name="registerScreen_name_hint">Nombre Paterno Materno</string>
    <string name="registerScreen_male">Masculino</string>
    <string name="registerScreen_female">Femenino</string>
    <string name="registerScreen_title_2">¡Casi Terminamos!</string>
    <string name="registerScreen_confirm_password">Confirmar Contraseña:</string>
    <string name="registerScreen_btn_create">Crear Cuenta</string>
    <string name="registerScreen_title_3">Es Importante que Sepas lo Siguiente:</string>
    <string name="registerScreen_explanation_1">SkyDelight es un sistema para prevención del estrés académico</string>
    <string name="registerScreen_explanation_2">La aplicación móvil brinda consejos, test y actividades recreativas</string>
    <string name="registerScreen_explanation_3">El sitio web proporciona un dashboard para dar seguimiento al estrés</string>
    <string name="registerScreen_explanation_4">El uso de este sistema no asegura la reducción del estrés</string>
    <string name="registerScreen_explanation_5">Este sistema no reemplaza ni sustituye asistencia profesional</string>
    <string name="registerScreen_btn_understand">¡Entendido!</string>
    <string name="navBar_home">Inicio</string>
    <string name="navBar_test">Test</string>
    <string name="navBar_games">Juegos</string>
    <string name="navBar_profile">Configuración</string>
    <string name="navBar_help_home_title">¿Para qué es el inicio?</string>
    <string name="navBar_help_home_description">En esta pantalla podrás encontrar recomendaciones para prevención del estrés académico, así como un reporte general de tu estrés y tu vulnerabilidad a este</string>
    <string name="navBar_help_test_title">¿Para qué son los test?</string>
    <string name="navBar_help_test_description">En esta pantalla puedes responder cuestionarios cada 24 horas para conocer diversos aspectos de tu estrés, pero no olvides visitar el sitio web para dar seguimiento a tus resultados</string>
    <string name="navBar_help_games_title">¿Para qué son los juegos?</string>
    <string name="navBar_help_games_description">En esta pantalla podrás disfrutar de una actividad usando realidad aumentada para que puedas relajarte (sólo si tu teléfono es compatible con ARCore)</string>
    <string name="tutorial_test_title">¡Casi Terminamos!</string>
    <string name="tutorial_test_description">Por último, debes responder un pequeño test de 21 preguntas para conocer tu estrés académico</string>
    <string name="tutorial_test_button">¡Entendido!</string>
    <string name="tutorial_four_title">Pantalla 4 de 4</string>
    <string name="tutorial_four_description">En esta pantalla podrás actualizar tus datos personales (con excepción del correo electrónico), cerrar sesión, eliminar tu cuenta y saber más de la aplicación</string>
    <string name="tutorial_three_title">Pantalla 3 de 4</string>
    <string name="tutorial_three_description">En esta pantalla podrás disfrutar de una actividad usando realidad aumentada para que puedas relajarte (sólo si tu teléfono es compatible con ARCore)</string>
    <string name="tutorial_second_title">Pantalla 2 de 4</string>
    <string name="tutorial_second_description">En esta pantalla puedes responder cuestionarios cada 24 horas para conocer diversos aspectos de tu estrés, pero no olvides visitar el sitio web para dar seguimiento a tus resultados</string>
    <string name="tutorial_first_title">Pantalla 1 de 4</string>
    <string name="tutorial_first_description">En esta pantalla podrás encontrar recomendaciones para prevención del estrés académico, así como un reporte general de tu estrés y tu vulnerabilidad a este</string>
    <string name="tutorial_title">¡Bienvenido(a)!</string>
    <string name="tutorial_description">Te recomendamos completar un pequeño tutorial antes de empezar a usar la aplicación</string>
    <string name="tutorial_btn_start">Empezar</string>
    <string name="tutorial_btn_skip">Omitir</string>
    <string name="home_title">¡Qué Bien que Volviste!</string>
    <string name="home_status_title">Reporte General</string>
    <string name="home_status_empty">Debes responder al menos un cuestionario SISCO o PSS en la sección de Test para conocer tu estrés</string>
    <string name="home_risk_empty">Debes responder al menos un cuestionario SVQ o SVS en la sección de Test para conocer tu vulnerabilidad al estrés</string>
    <string name="home_status_general">Estado:\n%s</string>
    <string name="home_status_risk">Riesgo de Estrés:\n%s</string>
    <string name="home_status_stress_test">Último Test de Estrés:\n%s</string>
    <string name="home_status_stress_result">Porcentaje de Estrés:\n%s</string>
    <string name="home_status_vulnerable_test">Último Test de Vulnerabilidad:\n%s</string>
    <string name="home_status_vulnerable_result">Vulnerabilidad al Estrés:\n%s</string>
    <string name="home_status_low">Relajado(a)</string>
    <string name="home_status_medium">Normal</string>
    <string name="home_status_high">Estresado(a)</string>
    <string name="home_risk_none">Sin Riesgo</string>
    <string name="home_risk_low">Leve</string>
    <string name="home_risk_medium">Medio</string>
    <string name="home_risk_high">Alto</string>
    <string name="games_title">¡Hora de Relajarse!</string>
    <string name="games_relaxAR_title">Lugares Relajantes</string>
    <string name="games_relaxAR_description">En esta sección podrás usar una puerta para visitar lugares relajantes como: una playa, una costa, un lago o una cascada</string>
    <string name="games_errorAR_title">Error de Incompatibilidad</string>
    <string name="games_errorAR_description">Parece que tu dispositivo no es compatible con ARCore</string>
    <string name="games_errorCamera_title">Error de Permisos</string>
    <string name="games_errorCamera_description">Para esta actividad se requiere realidad aumentada, por lo que debes permitir el acceso a la cámara</string>
    <string name="games_errorValidation_title">Demasiados Intentos</string>
    <string name="games_errorValidation_description">Si no puedes actualizar ARCore o tu dispositivo no es compatible, no podrás hacer uso de esta sección. Por favor, intenta de nuevo más tarde</string>
    <string name="games_errorAR_understand">¡Entendido!</string>
    <string name="profile_title">¿Necesitas un Cambio?</string>
    <string name="profile_update_profile">Actualizar Datos</string>
    <string name="profile_change_password">Cambiar Contraseña</string>
    <string name="profile_delete_account">Eliminar Cuenta</string>
    <string name="profile_btn_close_session">Cerrar Sesión</string>
    <string name="profile_privacy">Política de Privacidad</string>
    <string name="profile_about">Acerca de</string>
    <string name="profile_web">Ir al Sitio Web</string>
    <string name="profile_theme">Cambiar Tema</string>
    <string name="profile_update_password">Nueva Contraseña</string>
    <string name="profile_update_data">Ingresa tus Datos</string>
    <string name="profile_number">00</string>
    <string name="profile_note">Nota: el correo no puede cambiarse</string>
    <string name="profile_new_password">Ingresar Contraseña:</string>
    <string name="profile_email">Correo:</string>
    <string name="profile_btn_yes">¡Sí!</string>
    <string name="profile_btn_no">¡No!</string>
    <string name="profile_close_session_title">¡No te Vayas!</string>
    <string name="profile_close_session_description">¿Realmente Quieres Cerrar tu Sesión?</string>
    <string name="profile_delete_title">¡Cuidado!</string>
    <string name="profile_delete_description">¿Realmente Quieres Eliminar tu Cuenta?</string>
    <string name="test_title">Elige un Cuestionario</string>
    <string name="test_title_2">¿Todo Listo?</string>
    <string name="test_title_3">¡Buen Trabajo!</string>
    <string name="test_title_4">Resultados</string>
    <string name="test_title_5">¡Oh No!</string>
    <string name="test_title_6">¡Por Poco!</string>
    <string name="test_btn_end">Finalizar</string>
    <string name="test_initial_option">Seleccionar</string>
    <string name="test_btn_understand">¡Entendido!</string>
    <string name="test_time_error_title">¡Espera!</string>
</resources>