<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".navbar.ProfileDataFragment">

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/profile_email"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_title_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_number_picker_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/FieldEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_email_bottom"
        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_number_picker_left"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/guideline_name_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_name_top" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/FieldName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/registerScreen_name_hint"
        android:textColorHint="?attr/colorSecondaryVariant"
        app:hintTextColor="?attr/colorSecondaryVariant"
        app:boxStrokeColor="@color/text_input_stroke_color"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/guideline_name_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_name_field_top" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/blueTextViewStyle"
            android:id="@+id/editTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/txtBirthday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/guideline_age_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_number_picker_left"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_age_top" />

    <NumberPicker
        android:id="@+id/numberPickerAge"
        android:theme="@style/numberPickerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline_birthday_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_number_picker_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_number_picker_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_birthday_top" />

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/txtSex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sex"
        app:layout_constraintBottom_toTopOf="@+id/guideline_sex_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sex_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_sex_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_sex_top" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_birthday_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sex_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_sex_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_sex_bottom" >

        <RadioButton
            style="@style/blueTextViewStyle"
            android:id="@+id/btnMale"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_selector"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/sex_padding"
            android:gravity="center_horizontal|center_vertical"
            android:buttonTint="?attr/colorSecondaryVariant"
            android:text="@string/registerScreen_male" />

        <RadioButton
            style="@style/blueTextViewStyle"
            android:id="@+id/btnFemale"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_selector"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/sex_padding"
            android:gravity="center_horizontal|center_vertical"
            android:checked="false"
            android:buttonTint="?attr/colorSecondaryVariant"
            android:text="@string/registerScreen_female" />

    </RadioGroup>

    <TextView
        style="@style/blueTextViewStyle"
        android:id="@+id/txtNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/profile_note"
        app:layout_constraintBottom_toTopOf="@+id/guideline_note_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_note_top" />

    <Button
        style="@style/blueButtonBackgroundStyle"
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_update"
        app:cornerRadius="@dimen/corner_radius"
        app:rippleColor="?attr/btn_text_color_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline_next_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_next_top" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline_next_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_next_top" />

    <Button
        style="@style/greenButtonBackgroundStyle"
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_cancel"
        app:cornerRadius="@dimen/corner_radius"
        app:rippleColor="?attr/btn_text_color_green"
        app:layout_constraintBottom_toTopOf="@+id/guideline_return_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_return_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_navbar_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_email_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_name_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_name_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_name_field_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_name_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sex_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_birthday_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sex_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_age_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_age_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_birthday_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_note_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_note_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_return_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_return_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_navbar_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_navbar_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_number_picker_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_number_picker_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sex_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sex_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guideline_navbar_right" />

</androidx.constraintlayout.widget.ConstraintLayout>